--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-markdown": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^12.6.8",
